# micro-mart

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yml  noxfile.py  pyproject.toml
db/: Dockerfile  init-multi-postgres-databases.sh
iam/: .env.sample  README.md  pyproject.toml  start.dev.sh
iam/src/: manage.py
iam/src/core/: graphql.py  models.py  services.py  testing.py
iam/src/employee/: models.py
iam/src/employee/migrations/: 0001_initial.py
iam/src/iam/: asgi.py  containers.py  graphql.py  settings.py  urls.py  wsgi.py
iam/src/member/: schema.py
iam/src/member/migrations/: 0001_initial.py
iam/src/member/models/: __init__.py  member.py  organization.py
iam/src/member/services/: __init__.py  member.py
iam/src/member/tests/: test_member.py
pool/: Dockerfile  pgbouncer.ini  userlist.txt
retail/: Dockerfile  README.md  pyproject.toml
retail/src/: manage.py  worker.py
retail/src/adapters/: streaming.py  typesense.py
retail/src/core/: models.py  services.py  testing.py
retail/src/product/: apps.py  constants.py  event_handlers.py  events.py  models.py  schema.py  services.py
retail/src/product/management/commands/: sync_product_search.py
retail/src/product/migrations/: 0001_initial.py
retail/src/product/tests/: test_schema.py
retail/src/retail/: __init__.py  asgi.py  containers.py  graphql.py  settings.py  wsgi.py
router/: README.md  create-supergraph.sh  supergraph.yml
router/config/: router.yml
