[tool.poetry]
name = "micro-mart"
version = "0.1.0"
description = "A demo store."
authors = ["Martin R <23411718+RonquilloAeon@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
#packages = [{include = "micro_mart"}]

[tool.poetry.dependencies]
iam = {path = "iam", develop = true}
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
