[tool.poetry]
name = "micro-mart"
version = "0.1.0"
description = "A demo store."
authors = ["Martin R <23411718+RonquilloAeon@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
iam = {path = "iam", develop = true}
python = "^3.11"
dependency-injector = "^4.41.0"
microservice-utils = {extras = ["events", "gcp-pubsub"], version = "^0.11.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
