[tool.poetry]
name = "iam"
version = "0.1.0"
description = "Identity and Access Management with Django."
authors = ["Martin R <23411718+RonquilloAeon@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cuid2 = "^2.0.0"
dependency-injector = "^4.41.0"
Django = "^4.2.4"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^7.1.0"}
microservice-utils = {extras = ["events", "gcp-pubsub"], version = "^0.11.0"}
psycopg2-binary = "^2.9.7"
strawberry-graphql-django = "^0.16.0"
django-choices-field = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
